--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <div class="memory">
             <div>Memory:</div>
             <button onclick="printMemory()">Print memory</button>
+            <div style="font-size: 0.5em; display: flex; flex-direction: row; margin-left: 0.2em;">Go to address: <input id="memSearchBoxAddr" onkeypress="memAddr(event)"></input></div>
+            <div style="font-size: 0.5em; display: flex; flex-direction: row; margin-left: 0.2em;">Go to value: <input id="memSearchBoxVal" onkeypress="memVal(event)"></input></div>            
             <select multiple id="mem" size=50></select>
         </div>
         <div class="cpu">
