added a debugger; fixed memory issues for 0xFF00 and memory initialization

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <div class="labelValue" id="rhl"></div>
             <div class="labelValue" id="ra"></div>
             <div class="labelValue" id="rf"></div>
+            <div class="labelValue" id="pc"></div>
+            <div class="labelValue" id="sp"></div>
 
         </div>
         <!-- <div>
