fixed a few bugs; added better logging for debugging

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <canvas id="tiles" width="128" height="192"></canvas>
             </div>
         </div> -->
+        <script src="mnemonics.js"></script>
         <script src="res/tetrisRom.js"></script>
         <script src="cpu.js"></script>
         <script src="emu.js"></script>
