fixed a few bugs; updated readme; started implementing MBC1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/> 
         <style>
+            body {
+                background-color: black;
+                color: white;
+            }
             .grid-container {
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
